--- a/packages/react-color-picker/src/components/ColorChannelSlider.css
+++ b/packages/react-color-picker/src/components/ColorChannelSlider.css
@@ -1,29 +1,3 @@
-.tz-color-channel-slider {
-  --tz-color-channel-slider-track-height: 10px;
-  --tz-color-channel-slider-handle-size: 1rem;
-
-  color: var(--tz-text-secondary);
-  display: flex;
-  flex-direction: column;
-  gap: var(--tz-space-100);
-  max-width: 100%;
-  width: 15rem;
-}
-
-.tz-color-channel-slider-bounds {
-  cursor: pointer;
-  height: 100%;
-  inset: 0;
-  position: absolute;
-  z-index: 3;
-}
-
-.tz-color-channel-slider-track {
-  inset: 0;
-  position: absolute;
-  z-index: 3;
-}
-
 .tz-color-channel-slider-wrapper {
   height: var(--tz-color-channel-slider-track-height);
   position: relative;
@@ -47,8 +21,8 @@
 }
 
 .tz-color-channel-slider-bg__alpha {
-  --square-color: var(--tz-color-base-gray-800);
-  --square-size: calc(0.625 * var(--tz-color-channel-slider-track-height));
+  --tz-square-color: var(--tz-color-base-gray-800);
+  --tz-square-size: calc(0.625 * var(--tz-color-channel-slider-track-height));
 
   background-image: linear-gradient(
       to right,
@@ -59,11 +33,11 @@
   background-repeat: no-repeat, repeat;
   background-size:
     100% 100%,
-    var(--square-size) var(--square-size);
+    var(--tz-square-size) var(--tz-square-size);
 }
 
 .tz-color-channel-slider-bg-wrapper {
-  border-radius: var(--tz-color-channel-slider-track-height);
+  border-radius: var(--tz-radius-1000);
   display: flex;
   height: 100%;
   left: 0;
@@ -118,75 +92,4 @@
     top: 0;
     width: calc(0.5 * var(--tz-color-channel-slider-track-height));
   }
-}
-
-.tz-color-channel-slider-handle {
-  --border-size: 1px;
-  --handle-offset: calc(
-    var(--tz-color-channel-slider-handle-size) -
-      var(--tz-color-channel-slider-track-height) - (2 * var(--border-size))
-  );
-
-  background: var(--tz-color-base-gray-000);
-  border-color: var(--tz-color-base-gray-700);
-  border-radius: var(--tz-color-channel-slider-handle-size);
-  border-style: solid;
-  border-width: var(--border-size);
-  box-shadow: var(--tz-shadow-100);
-  box-sizing: border-box;
-  cursor: grab;
-  height: var(--tz-color-channel-slider-handle-size);
-  left: calc(-0.5 * var(--tz-color-channel-slider-handle-size));
-  padding: 0;
-  position: absolute;
-  top: 50%;
-  touch-action: pan-x;
-  transform: translate3d(var(--x), -50%, 0);
-  width: var(--tz-color-channel-slider-handle-size);
-  z-index: calc(var(--tz-layer-base) + 1);
-
-  &:hover {
-    border-color: var(--tz-color-base-gray-900);
-  }
-
-  &::after {
-    background-color: var(--current-color);
-    border-radius: var(--tz-color-channel-slider-handle-size);
-    box-shadow: inset 0 0 0 1px rgb(0 0 0/0.2);
-    content: "";
-    height: var(--tz-color-channel-slider-track-height);
-    left: calc(0.5 * var(--handle-offset));
-    pointer-events: none;
-    position: absolute;
-    top: calc(0.5 * var(--handle-offset));
-    width: var(--tz-color-channel-slider-track-height);
-    z-index: calc(var(--tz-layer-base) + 2);
-  }
-
-  &:active {
-    cursor: grabbing;
-  }
-}
-
-.tz-color-channel-slider-input {
-  input {
-    width: 3rem;
-  }
-}
-
-.tz-color-channel-slider-inputpair {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-
-.tz-color-channel-slider-label {
-  font-size: var(--tz-typography-200-regular-font-size);
-}
-
-body.tz-color-channel-slider-is-grabbing,
-body.tz-color-channel-slider-is-grabbing .tz-color-channel-slider-handle,
-body.tz-color-channel-slider-is-grabbing .tz-color-channel-slider-bounds {
-  cursor: grabbing;
 }
