--- a/packages/tiles/src/Select/Select.css
+++ b/packages/tiles/src/Select/Select.css
@@ -1,25 +1,25 @@
 .tz-select {
-  --select-text: var(--tz-color-base-gray-1100);
-  --select-border: var(--tz-color-base-gray-400);
-  --select-bg: var(--tz-color-base);
+  --tz-select-text: var(--tz-color-base-gray-1100);
+  --tz-select-border: var(--tz-color-base-gray-400);
+  --tz-select-bg: var(--tz-color-base);
 
-  color: var(--select-text);
+  color: var(--tz-select-text);
   font-family: var(--tz-typography-300-regular-family);
   font-size: var(--tz-typography-300-regular-font-size);
   letter-spacing: var(--tz-typography-300-regular-letter-spacing);
   line-height: var(--tz-typography-300-regular-line-height);
   position: relative;
-  z-index: var(--tz-layer-tooltip);
+  z-index: var(--tz-layer-menu);
 }
 
 .tz-select-item {
   align-items: center;
   border-radius: 3px;
-  color: var(--tz-color-ui-base-text);
+  color: var(--tz-color-control-text);
   display: flex;
   font-family: var(--tz-typography-300-regular-family);
   font-size: var(--tz-typography-300-regular-font-size);
-  height: var(--tz-control-default-size);
+  height: var(--tz-space-control-m);
   letter-spacing: var(--tz-typography-300-regular-letter-spacing);
   line-height: 1;
   padding: 0 var(--tz-space-200);
@@ -27,27 +27,27 @@
   user-select: none;
 
   &[data-disabled] {
-    color: var(--tz-color-base-gray-700);
+    opacity: 0.7;
     pointer-events: none;
   }
 
   &[data-highlighted] {
-    background-color: var(--tz-nav-secondary-selected-bg);
-    color: var(--tz-nav-secondary-selected-text);
+    background-color: var(--tz-color-control-bg-selected);
+    color: var(--tz-color-control-text-selected);
     outline: none;
 
     .tz-select-item-indicator {
-      background-color: var(--tz-nav-secondary-selected-bg);
+      background-color: var(--tz-color-control-bg-selected);
     }
   }
 }
 
 .tz-select-item-inner {
-  --icon-size: 1rem;
+  --tz-select-icon-size: 1rem;
 
   display: grid;
   gap: var(--tz-space-200);
-  grid-template-columns: var(--icon-size) max-content;
+  grid-template-columns: var(--tz-select-icon-size) max-content;
 }
 
 .tz-select-item-icon {
@@ -64,19 +64,19 @@
 
 .tz-select-item-indicator {
   align-items: center;
-  background-color: var(--tz-button-secondary-bg);
+  background-color: var(--tz-color-control-bg);
   display: inline-flex;
   justify-content: center;
   left: 0;
   position: absolute;
-  width: var(--tz-control-default-size);
+  width: var(--tz-space-control-m);
 }
 
 .tz-select-options {
-  background: var(--tz-button-secondary-bg);
+  background: var(--tz-color-control-bg);
   border-radius: var(--tz-radius-200);
   box-shadow: var(--tz-shadow-300);
-  color: var(--tz-text-secondary);
+  color: var(--tz-color-control-text);
   overflow: hidden;
   padding-bottom: var(--tz-space-200);
   padding-top: var(--tz-space-200);
@@ -86,27 +86,27 @@
 
 .tz-select-scroll-button {
   align-items: center;
-  background-color: var(--tz-button-secondary-bg);
-  color: var(--tz-icon-secondary);
+  background-color: var(--tz-color-control-bg);
+  color: var(--tz-color-control-label);
   cursor: default;
   display: flex;
-  height: var(--tz-control-default-size);
+  height: var(--tz-space-control-m);
   justify-content: center;
 }
 
 .tz-select-trigger {
   align-items: center;
-  background-color: var(--tz-button-secondary-bg);
+  background-color: var(--tz-color-control-bg);
   border: none;
   border-radius: var(--tz-radius-300);
-  color: var(--tz-button-secondary-text);
+  color: var(--tz-color-control-text);
   cursor: pointer;
   display: inline-flex;
   font-family: var(--tz-typography-300-regular-font-family);
   font-size: var(--tz-typography-300-regular-font-size);
   font-weight: var(--tz-typography-300-regular-font-weight);
   gap: var(--tz-space-200);
-  height: var(--tz-control-default-size);
+  height: var(--tz-space-control-m);
   justify-content: center;
   letter-spacing: var(--tz-typography-300-regular-letter-spacing);
   line-height: 1;
@@ -115,7 +115,7 @@
 
   &:hover,
   &:focus-visible {
-    outline-color: var(--tz-nav-primary-highlight);
+    outline-color: var(--tz-color-control-border-focus);
   }
 }
 
