--- a/www/src/components/head-meta.astro
+++ b/www/src/components/head-meta.astro
@@ -13,7 +13,7 @@ const { title, description, socialImage } = Astro.props;
 <title>
   {
     title
-      ? `${title} ◆ Terrazzo`
+      ? `${title} ⛋ Terrazzo`
       : `Terrazzo: tools for token management and code generation`
   }
 </title>
