Update github repo link in header

--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -15,7 +15,7 @@ import ThemeSwitcher from './ThemeSwitcher.tsx';
       </li>
       <li>
         <a
-          href="https://github.com/terrazzo/terrazzo"
+          href="https://github.com/terrazzoapp/terrazzo"
           title="Terrazzo on GitHub"
         >
           <GitHubLogo />
