--- a/www/src/components/docs-header-nav.astro
+++ b/www/src/components/docs-header-nav.astro
@@ -1,7 +1,7 @@
 ---
-import { GitHubLogo } from '@terrazzo/icons';
-import DocsSearch from './SearchBox.tsx';
-import ThemeSwitcher from './ThemeSwitcher.tsx';
+import { GitHubLogo } from "@terrazzo/icons";
+import DocsSearch from "./SearchBox.tsx";
+import ThemeSwitcher from "./ThemeSwitcher.tsx";
 ---
 
 <header class="header-nav">
@@ -28,11 +28,11 @@ import ThemeSwitcher from './ThemeSwitcher.tsx';
 <style>
   .header-nav {
     align-items: center;
-    background-color: var(--tz-color-content-bg);
-    border-bottom: 1px solid var(--tz-color-content-border);
-    color: var(--tz-color-content-text);
+    background-color: var(--tz-color-bg-1);
+    border-bottom: var(--tz-border-2);
+    color: var(--tz-color-text-1);
     display: flex;
-    max-height: var(--tz-space-900);
+    max-height: var(--grid-size);
     justify-content: space-between;
     padding-inline: var(--tz-space-500);
     width: 100%;
